fix datagenerators and run them